<resources>
    <string name="app_name">Assignment 3</string>
    <string name="name">BookStore</string>
    <string name="splash_description_text">Welcome to my book store</string>
    <string name="splash_button_title">shop now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot password?</string>
    <string name="signup">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>

    <string name="emailIsEmpty">Please enter Email field!</string>
    <string name="passwordIsEmpty">Please enter Password field!</string>
    <string name="firstNameIsEmpty">Please enter First Name field!</string>
    <string name="lastNameIsEmpty">Please enter Last Name field!</string>
    <string name="confirmPasswordIsEmpty">Please enter Confirm Password field!</string>
    <string name="passwordNotEqual">Password and Confirm Password are not equal!</string>
    <string name="successSignUp">Successfully Sign Up user!</string>
    <string name="successLogIn">Successfully Log In!</string>

    <string name="please_wait">Please wait...</string>
    <string name="forgetPassword_description">Enter your email address, we will send email to reset password</string>
    <string name="submit">Submit</string>
    <string name="emailIsSend">Email send successfully to reset password!</string>
    <string name="dashboard_user">Dashboard Client:</string>
    <string name="dashboard_admin">Dashboard Admin:</string>
    <string name="search">Search</string>
    <string name="all_books">ALL BOOKS</string>
    <string name="add_book">Add Book</string>
    <string name="list_of_books">List of books</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>