<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardAdminActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dashboard_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/dashboardAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_admin"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:paddingStart="@dimen/padding_dashboard"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a@a.com"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:paddingStart="@dimen/padding_dashboard"
            android:layout_below="@+id/dashboardAdmin"/>

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_logout_24"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/padding"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addBook"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/dark_color"
        android:text="@string/add_book"
        android:layout_below="@+id/top"
        android:layout_margin="@dimen/margin_top"
        android:background="@drawable/dashboard_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/listBook"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/dark_color"
        android:text="@string/list_of_books"
        android:layout_below="@+id/addBook"
        android:layout_marginHorizontal="@dimen/margin_top"
        android:background="@drawable/dashboard_button"/>

</RelativeLayout>